# data-exercises

./: coding_exercise_part_1.py  pyproject.toml
