[tool.poetry]
name = "data-annotations"
version = "0.1.0"
description = ""
authors = ["Marshall Bruner <brunerm99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
ptpython = "^3.0.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
